--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "setup:env": "docker compose down && docker compose up -d && sleep 2 && npm run migratedb:reset && npm run migratedb:deploy",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "migratedb:deploy": "npx prisma migrate deploy",
+    "migratedb:dev": "npx prisma migrate dev",
+    "migratedb:reset": "npx prisma migrate reset --force",
     "test": "jest --runInBand",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
